--- a/src/main/resources/templates/usuarioCrear.html
+++ b/src/main/resources/templates/usuarioCrear.html
@@ -60,6 +60,8 @@
                 switch (xhr.status) {
                     case 409:
                         alert("El usuario ya existe")
+                    case 500:
+                        alert("El usuario ya existe")
                 }
             },
         });
