--- a/src/main/resources/templates/usuarios.html
+++ b/src/main/resources/templates/usuarios.html
@@ -72,7 +72,7 @@
             error: function (xhr, ajaxOptions, thrownError) {
                 switch (xhr.status) {
                     case 409:
-                        alert("El usuario tiene alquileres sin devolver")
+                        alert(xhr.responseText)
                 }
             },
         });
