--- a/src/main/resources/templates/alquileresCrear.html
+++ b/src/main/resources/templates/alquileresCrear.html
@@ -23,7 +23,7 @@
                                     required/><br>
             Pelicula: <input autocomplete="off" list="peliculas" id="pelicula" type="text" name="pelicula"/>
             <datalist id="peliculas">
-                <option th:each="row : ${listaPeliculas}"  th:value="${row.nombre}" th:data-value="${row.idpeliculas}">
+                <option th:each="row : ${listaPeliculas}" th:text="${row.generosByIdgenero.nombre}" th:data-text="${row.generosByIdgenero.nombre}" th:value="${row.nombre}" th:data-value="${row.idpeliculas}">
             </datalist><br>
             <button style="margin-bottom:10px" type="submit" class="btn btn-default">Agregar peliculas</button><br>
             <table id="tablaPeliculas" class="table table-bordered table-hover">
@@ -89,7 +89,13 @@
             document.getElementById("pelicula").value +
             "']").dataset.value;
         var nompeli2send = document.getElementById("pelicula").value;
+        var nomgen2send = document.querySelector("#peliculas option[value='" +
+            document.getElementById("pelicula").value +
+            "']").dataset.text;
         var peli = {
+            "generosByIdgenero": {
+                "nombre": nomgen2send,
+            },
             idpeliculas: idpeli2send,
             nombre: nompeli2send
         }
@@ -97,7 +103,9 @@
         // store customer
         listaPeliculas.push(peli);
         //sacar opcion del select
-        $("#peliculas option[value='"+document.getElementById ("pelicula").value +"']").remove();
+        $("#peliculas option[data-value='"+document.querySelector("#peliculas option[value='" +
+            document.getElementById("pelicula").value +
+            "']").dataset.value +"']").remove();
 
         // Aca sacar peli pusheada del options
 
@@ -133,6 +141,7 @@
         var datalist = document.getElementById("peliculas");
         var nuevaOpcion = document.createElement('option');
         nuevaOpcion.value = listaPeliculas[peliculaId].nombre;
+        nuevaOpcion.textContent = listaPeliculas[peliculaId].generosByIdgenero.nombre;
         nuevaOpcion.setAttribute('data-value',listaPeliculas[peliculaId].idpeliculas);
         datalist.appendChild(nuevaOpcion);
         listaPeliculas.splice(peliculaId, 1);
